--- a/dev/less/imports/_setting.less
+++ b/dev/less/imports/_setting.less
@@ -2,3 +2,26 @@
 @banner_font:;
 @helveticaTh:;
 @white:white;
+@va:middle;
+@crazy:#78645d;
+@bg-color:#fd926d;
+@font-face{
+	font-family:"OMG";
+	src:url(../font/Trebuchet.ttf);
+}
+@font-face{
+	font-family:"luxury";
+	src:url(../font/LuxuryRoyaleJF.ttf);
+	}
+	@font-face{
+	font-family:"hel";
+	src:url(../font/HelveticaNeueLTStd-HvCn.otf);
+	}
+	@font-face{
+	font-family:"Hel-LtCn";
+	src:url(../font/HelveticaNeueLTStd-LtCn.otf);
+	}
+	@font-face{
+	font-family:"Hel-Th";
+	src:url(../font/HelveticaNeueLTStd-Th.otf);
+	}
