--- a/dev/less/imports/sprite.less
+++ b/dev/less/imports/sprite.less
@@ -12,164 +12,219 @@ At the bottom of this section, we provide information about the spritesheet itse
 @spritesheet: width height image @spritesheet-sprites;
 */
 @account-big-name: 'account-big';
-@account-big-x: 61px;
-@account-big-y: 0px;
-@account-big-offset-x: -61px;
-@account-big-offset-y: 0px;
+@account-big-x: 0px;
+@account-big-y: 60px;
+@account-big-offset-x: 0px;
+@account-big-offset-y: -60px;
 @account-big-width: 40px;
 @account-big-height: 38px;
-@account-big-total-width: 165px;
-@account-big-total-height: 137px;
+@account-big-total-width: 206px;
+@account-big-total-height: 199px;
 @account-big-image: '../img/sprite.png';
-@account-big: 61px 0px -61px 0px 40px 38px 165px 137px '../img/sprite.png' 'account-big';
+@account-big: 0px 60px 0px -60px 40px 38px 206px 199px '../img/sprite.png' 'account-big';
 @account-name: 'account';
-@account-x: 111px;
-@account-y: 83px;
-@account-offset-x: -111px;
-@account-offset-y: -83px;
+@account-x: 44px;
+@account-y: 153px;
+@account-offset-x: -44px;
+@account-offset-y: -153px;
 @account-width: 14px;
 @account-height: 13px;
-@account-total-width: 165px;
-@account-total-height: 137px;
+@account-total-width: 206px;
+@account-total-height: 199px;
 @account-image: '../img/sprite.png';
-@account: 111px 83px -111px -83px 14px 13px 165px 137px '../img/sprite.png' 'account';
+@account: 44px 153px -44px -153px 14px 13px 206px 199px '../img/sprite.png' 'account';
 @bag-big-name: 'bag-big';
-@bag-big-x: 0px;
+@bag-big-x: 112px;
 @bag-big-y: 0px;
-@bag-big-offset-x: 0px;
+@bag-big-offset-x: -112px;
 @bag-big-offset-y: 0px;
 @bag-big-width: 51px;
 @bag-big-height: 49px;
-@bag-big-total-width: 165px;
-@bag-big-total-height: 137px;
+@bag-big-total-width: 206px;
+@bag-big-total-height: 199px;
 @bag-big-image: '../img/sprite.png';
-@bag-big: 0px 0px 0px 0px 51px 49px 165px 137px '../img/sprite.png' 'bag-big';
+@bag-big: 112px 0px -112px 0px 51px 49px 206px 199px '../img/sprite.png' 'bag-big';
 @bag-name: 'bag';
-@bag-x: 57px;
-@bag-y: 107px;
-@bag-offset-x: -57px;
-@bag-offset-y: -107px;
+@bag-x: 173px;
+@bag-y: 109px;
+@bag-offset-x: -173px;
+@bag-offset-y: -109px;
 @bag-width: 20px;
 @bag-height: 19px;
-@bag-total-width: 165px;
-@bag-total-height: 137px;
+@bag-total-width: 206px;
+@bag-total-height: 199px;
 @bag-image: '../img/sprite.png';
-@bag: 57px 107px -57px -107px 20px 19px 165px 137px '../img/sprite.png' 'bag';
+@bag: 173px 109px -173px -109px 20px 19px 206px 199px '../img/sprite.png' 'bag';
 @facebook-big-name: 'facebook-big';
-@facebook-big-x: 0px;
-@facebook-big-y: 107px;
-@facebook-big-offset-x: 0px;
-@facebook-big-offset-y: -107px;
+@facebook-big-x: 173px;
+@facebook-big-y: 38px;
+@facebook-big-offset-x: -173px;
+@facebook-big-offset-y: -38px;
 @facebook-big-width: 15px;
 @facebook-big-height: 30px;
-@facebook-big-total-width: 165px;
-@facebook-big-total-height: 137px;
+@facebook-big-total-width: 206px;
+@facebook-big-total-height: 199px;
 @facebook-big-image: '../img/sprite.png';
-@facebook-big: 0px 107px 0px -107px 15px 30px 165px 137px '../img/sprite.png' 'facebook-big';
+@facebook-big: 173px 38px -173px -38px 15px 30px 206px 199px '../img/sprite.png' 'facebook-big';
 @facebook-name: 'facebook';
-@facebook-x: 156px;
-@facebook-y: 0px;
-@facebook-offset-x: -156px;
-@facebook-offset-y: 0px;
+@facebook-x: 0px;
+@facebook-y: 181px;
+@facebook-offset-x: 0px;
+@facebook-offset-y: -181px;
 @facebook-width: 9px;
 @facebook-height: 18px;
-@facebook-total-width: 165px;
-@facebook-total-height: 137px;
+@facebook-total-width: 206px;
+@facebook-total-height: 199px;
 @facebook-image: '../img/sprite.png';
-@facebook: 156px 0px -156px 0px 9px 18px 165px 137px '../img/sprite.png' 'facebook';
+@facebook: 0px 181px 0px -181px 9px 18px 206px 199px '../img/sprite.png' 'facebook';
+@left-name: 'left';
+@left-x: 22px;
+@left-y: 153px;
+@left-offset-x: -22px;
+@left-offset-y: -153px;
+@left-width: 12px;
+@left-height: 18px;
+@left-total-width: 206px;
+@left-total-height: 199px;
+@left-image: '../img/sprite.png';
+@left: 22px 153px -22px -153px 12px 18px 206px 199px '../img/sprite.png' 'left';
+@logo-name: 'logo';
+@logo-x: 0px;
+@logo-y: 0px;
+@logo-offset-x: 0px;
+@logo-offset-y: 0px;
+@logo-width: 102px;
+@logo-height: 50px;
+@logo-total-width: 206px;
+@logo-total-height: 199px;
+@logo-image: '../img/sprite.png';
+@logo: 0px 0px 0px 0px 102px 50px 206px 199px '../img/sprite.png' 'logo';
+@menu-small-name: 'menu-small';
+@menu-small-x: 45px;
+@menu-small-y: 108px;
+@menu-small-offset-x: -45px;
+@menu-small-offset-y: -108px;
+@menu-small-width: 33px;
+@menu-small-height: 30px;
+@menu-small-total-width: 206px;
+@menu-small-total-height: 199px;
+@menu-small-image: '../img/sprite.png';
+@menu-small: 45px 108px -45px -108px 33px 30px 206px 199px '../img/sprite.png' 'menu-small';
+@menu768-name: 'menu768';
+@menu768-x: 88px;
+@menu768-y: 108px;
+@menu768-offset-x: -88px;
+@menu768-offset-y: -108px;
+@menu768-width: 33px;
+@menu768-height: 30px;
+@menu768-total-width: 206px;
+@menu768-total-height: 199px;
+@menu768-image: '../img/sprite.png';
+@menu768: 88px 108px -88px -108px 33px 30px 206px 199px '../img/sprite.png' 'menu768';
 @pa-big-name: 'pa-big';
-@pa-big-x: 111px;
-@pa-big-y: 0px;
-@pa-big-offset-x: -111px;
-@pa-big-offset-y: 0px;
+@pa-big-x: 0px;
+@pa-big-y: 108px;
+@pa-big-offset-x: 0px;
+@pa-big-offset-y: -108px;
 @pa-big-width: 35px;
 @pa-big-height: 35px;
-@pa-big-total-width: 165px;
-@pa-big-total-height: 137px;
+@pa-big-total-width: 206px;
+@pa-big-total-height: 199px;
 @pa-big-image: '../img/sprite.png';
-@pa-big: 111px 0px -111px 0px 35px 35px 165px 137px '../img/sprite.png' 'pa-big';
+@pa-big: 0px 108px 0px -108px 35px 35px 206px 199px '../img/sprite.png' 'pa-big';
 @pa-name: 'pa';
-@pa-x: 25px;
-@pa-y: 107px;
-@pa-offset-x: -25px;
-@pa-offset-y: -107px;
+@pa-x: 173px;
+@pa-y: 78px;
+@pa-offset-x: -173px;
+@pa-offset-y: -78px;
 @pa-width: 22px;
 @pa-height: 21px;
-@pa-total-width: 165px;
-@pa-total-height: 137px;
+@pa-total-width: 206px;
+@pa-total-height: 199px;
 @pa-image: '../img/sprite.png';
-@pa: 25px 107px -25px -107px 22px 21px 165px 137px '../img/sprite.png' 'pa';
+@pa: 173px 78px -173px -78px 22px 21px 206px 199px '../img/sprite.png' 'pa';
 @plus-big-name: 'plus-big';
-@plus-big-x: 48px;
-@plus-big-y: 59px;
-@plus-big-offset-x: -48px;
-@plus-big-offset-y: -59px;
+@plus-big-x: 98px;
+@plus-big-y: 60px;
+@plus-big-offset-x: -98px;
+@plus-big-offset-y: -60px;
 @plus-big-width: 37px;
 @plus-big-height: 37px;
-@plus-big-total-width: 165px;
-@plus-big-total-height: 137px;
+@plus-big-total-width: 206px;
+@plus-big-total-height: 199px;
 @plus-big-image: '../img/sprite.png';
-@plus-big: 48px 59px -48px -59px 37px 37px 165px 137px '../img/sprite.png' 'plus-big';
+@plus-big: 98px 60px -98px -60px 37px 37px 206px 199px '../img/sprite.png' 'plus-big';
 @plus-name: 'plus';
-@plus-x: 135px;
-@plus-y: 83px;
-@plus-offset-x: -135px;
-@plus-offset-y: -83px;
+@plus-x: 145px;
+@plus-y: 85px;
+@plus-offset-x: -145px;
+@plus-offset-y: -85px;
 @plus-width: 11px;
 @plus-height: 11px;
-@plus-total-width: 165px;
-@plus-total-height: 137px;
+@plus-total-width: 206px;
+@plus-total-height: 199px;
 @plus-image: '../img/sprite.png';
-@plus: 135px 83px -135px -83px 11px 11px 165px 137px '../img/sprite.png' 'plus';
+@plus: 145px 85px -145px -85px 11px 11px 206px 199px '../img/sprite.png' 'plus';
+@right-name: 'right';
+@right-x: 0px;
+@right-y: 153px;
+@right-offset-x: 0px;
+@right-offset-y: -153px;
+@right-width: 12px;
+@right-height: 18px;
+@right-total-width: 206px;
+@right-total-height: 199px;
+@right-image: '../img/sprite.png';
+@right: 0px 153px 0px -153px 12px 18px 206px 199px '../img/sprite.png' 'right';
 @search-big-name: 'search-big';
-@search-big-x: 0px;
-@search-big-y: 59px;
-@search-big-offset-x: 0px;
-@search-big-offset-y: -59px;
+@search-big-x: 50px;
+@search-big-y: 60px;
+@search-big-offset-x: -50px;
+@search-big-offset-y: -60px;
 @search-big-width: 38px;
 @search-big-height: 38px;
-@search-big-total-width: 165px;
-@search-big-total-height: 137px;
+@search-big-total-width: 206px;
+@search-big-total-height: 199px;
 @search-big-image: '../img/sprite.png';
-@search-big: 0px 59px 0px -59px 38px 38px 165px 137px '../img/sprite.png' 'search-big';
+@search-big: 50px 60px -50px -60px 38px 38px 206px 199px '../img/sprite.png' 'search-big';
 @search-name: 'search';
-@search-x: 117px;
-@search-y: 107px;
-@search-offset-x: -117px;
-@search-offset-y: -107px;
+@search-x: 145px;
+@search-y: 60px;
+@search-offset-x: -145px;
+@search-offset-y: -60px;
 @search-width: 15px;
 @search-height: 15px;
-@search-total-width: 165px;
-@search-total-height: 137px;
+@search-total-width: 206px;
+@search-total-height: 199px;
 @search-image: '../img/sprite.png';
-@search: 117px 107px -117px -107px 15px 15px 165px 137px '../img/sprite.png' 'search';
+@search: 145px 60px -145px -60px 15px 15px 206px 199px '../img/sprite.png' 'search';
 @twitter-big-name: 'twitter-big';
-@twitter-big-x: 111px;
-@twitter-big-y: 45px;
-@twitter-big-offset-x: -111px;
-@twitter-big-offset-y: -45px;
+@twitter-big-x: 173px;
+@twitter-big-y: 0px;
+@twitter-big-offset-x: -173px;
+@twitter-big-offset-y: 0px;
 @twitter-big-width: 33px;
 @twitter-big-height: 28px;
-@twitter-big-total-width: 165px;
-@twitter-big-total-height: 137px;
+@twitter-big-total-width: 206px;
+@twitter-big-total-height: 199px;
 @twitter-big-image: '../img/sprite.png';
-@twitter-big: 111px 45px -111px -45px 33px 28px 165px 137px '../img/sprite.png' 'twitter-big';
+@twitter-big: 173px 0px -173px 0px 33px 28px 206px 199px '../img/sprite.png' 'twitter-big';
 @twitter-name: 'twitter';
-@twitter-x: 87px;
-@twitter-y: 107px;
-@twitter-offset-x: -87px;
-@twitter-offset-y: -107px;
+@twitter-x: 131px;
+@twitter-y: 108px;
+@twitter-offset-x: -131px;
+@twitter-offset-y: -108px;
 @twitter-width: 20px;
 @twitter-height: 17px;
-@twitter-total-width: 165px;
-@twitter-total-height: 137px;
+@twitter-total-width: 206px;
+@twitter-total-height: 199px;
 @twitter-image: '../img/sprite.png';
-@twitter: 87px 107px -87px -107px 20px 17px 165px 137px '../img/sprite.png' 'twitter';
-@spritesheet-width: 165px;
-@spritesheet-height: 137px;
+@twitter: 131px 108px -131px -108px 20px 17px 206px 199px '../img/sprite.png' 'twitter';
+@spritesheet-width: 206px;
+@spritesheet-height: 199px;
 @spritesheet-image: '../img/sprite.png';
-@spritesheet-sprites: @account-big @account @bag-big @bag @facebook-big @facebook @pa-big @pa @plus-big @plus @search-big @search @twitter-big @twitter;
-@spritesheet: 165px 137px '../img/sprite.png' @spritesheet-sprites;
+@spritesheet-sprites: @account-big @account @bag-big @bag @facebook-big @facebook @left @logo @menu-small @menu768 @pa-big @pa @plus-big @plus @right @search-big @search @twitter-big @twitter;
+@spritesheet: 206px 199px '../img/sprite.png' @spritesheet-sprites;
 
 /*
 The provided classes are intended to be used with the array-like variables
