--- a/dev/less/general.less
+++ b/dev/less/general.less
@@ -1,3 +1,4 @@
+
 @import 'imports/_setting';
 @import 'imports/_mixins';
 @import 'imports/sprite';
@@ -21,11 +22,17 @@
 }
 .col{
 	float: left;
+
+
+}
+.container{
+	padding:0 2%;
+	max-width:970px;
+	margin:0 auto;
 }
 .grid-univers(xs, 2);
 @media screen and (min-width: 768px){
 	.grid-univers(m, 9);
-	.header-pad_top{padding-top:10px;}
 		
 	
 }
@@ -34,6 +41,9 @@
 }
 /*----------general------------*/
 @import 'imports/header';
+@import 'imports/banner';
+@import 'imports/email';
+
 .text-right{
 	text-align: right;
 }
