--- a/dev/less/imports/_mixins.less
+++ b/dev/less/imports/_mixins.less
@@ -8,3 +8,33 @@
 	display: inline-block;
 	vertical-align: @va;
 }
+.pad-top-bottom{
+	padding-top: 37px;
+	padding-bottom: 37px;
+}
+.float-right{
+	float:right;
+}
+.peach-white{
+color:@white;
+background-color:@bg-color;
+}
+.triangle{
+content:'';
+width:0;
+height:0;
+border:5px solid transparent;
+border-top-color:black;
+.inline-block(middle);
+margin-left:5px;
+transform:translateY(25%);	    	 
+}
+.triangle-now{
+content:'';
+width:0;
+height:0;
+border:4px solid transparent;
+border-left-color:@white;
+float:right;
+transform:translateY(50%);	    	 
+}
