--- a/dev/less/general.less
+++ b/dev/less/general.less
@@ -3,7 +3,7 @@
 @import 'imports/_mixins';
 @import 'imports/sprite';
 @import 'imports/areset';
-
+@import 'imports/font';
 /*--------------icons------------------*/
 .icon-account{
 	.sprite(@account-big);
@@ -43,6 +43,7 @@
 @import 'imports/header';
 @import 'imports/banner';
 @import 'imports/email';
+@import 'imports/info';
 
 .text-right{
 	text-align: right;
