--- a/dev/less/imports/_setting.less
+++ b/dev/less/imports/_setting.less
@@ -5,23 +5,4 @@
 @va:middle;
 @crazy:#78645d;
 @bg-color:#fd926d;
-@font-face{
-	font-family:"OMG";
-	src:url(../font/Trebuchet.ttf);
-}
-@font-face{
-	font-family:"luxury";
-	src:url(../font/LuxuryRoyaleJF.ttf);
-	}
-	@font-face{
-	font-family:"hel";
-	src:url(../font/HelveticaNeueLTStd-HvCn.otf);
-	}
-	@font-face{
-	font-family:"Hel-LtCn";
-	src:url(../font/HelveticaNeueLTStd-LtCn.otf);
-	}
-	@font-face{
-	font-family:"Hel-Th";
-	src:url(../font/HelveticaNeueLTStd-Th.otf);
-	}
+@f-s:1rem;
