--- a/dev/less/imports/header.less
+++ b/dev/less/imports/header.less
@@ -1,10 +1,12 @@
 .header{
 	font-family: sans-serif;
-	background-color: #ffffff;
+	
 text-transform:uppercase;
 	&-top{
-		  background:#000;
-
+		
+@media screen and (min-width:768px){
+	background:#000;
+	}  
 	}
 	&-pad_top{
 		
@@ -125,6 +127,9 @@ text-transform:uppercase;
 	    }
 	    
 	}
+.box2{
+	background:#000;
+}
 
 	.custom{
 		line-height:30px;
